[package]
name = "native-executor"
version = "0.4.0"
edition = "2024"
authors = ["Lexo Liu"]
license = "MIT"
repository = "https://github.com/waterui/native-executor"
description = "Platform-native async task executor"
keywords = ["task", "async", "concurrency", "waterui"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-channel = { version = "2.5.0", default-features = false }
async-task = { version = "4.7.1", default-features = false}

[dependencies.executor-core]
version = "0.3.1"

[target.'cfg(target_vendor = "apple")'.dependencies]
dispatch = "0.2.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]


[lints]
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

