[package]
name = "native-executor"
version = "0.6.0"
edition = "2024"
authors = ["Lexo Liu"]
license = "MIT"
repository = "https://github.com/waterui/native-executor"
description = "Platform-native async task executor"
keywords = ["task", "async", "concurrency", "waterui"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-channel = { version = "2.5.0", default-features = false }
async-task = { version = "4.7.1"}
async-executor = { version = "1.13.3", optional = true }
num_cpus = { version = "1.17.0", optional = true}
futures-lite = { version = "2.6.1", optional = true}
async-io = { version = "2.6.0", optional = true}

[dependencies.executor-core]
version = "0.6.0"
features = ["async-task"]

[target.'cfg(target_vendor = "apple")'.dependencies]
dispatch = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["polyfill"]
polyfill = ["dep:async-executor","dep:num_cpus", "dep:futures-lite","dep:async-io"]


[lints]
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
